fixed width and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 20px;
+    text-align: center;
+    width: 90%;
 }
 
 h1 {
